--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -708,9 +708,11 @@ section {
   background: #f6f6f6;
   padding: 80px 0;
 }
+
 #testimonials .profile {
   text-align: center;
 }
+
 #testimonials .profile .pic {
   border-radius: 50%;
   border: 6px solid #fff;
@@ -719,17 +721,21 @@ section {
   height: 260px;
   width: 260px;
 }
+
 #testimonials .profile .pic img {
   max-width: 100%;
 }
+
 #testimonials .profile h4 {
   font-weight: 700;
   color: #03C4EB;
   margin-bottom: 5px;
 }
+
 #testimonials .profile span {
   color: #333333;
 }
+
 #testimonials .quote {
   position: relative;
   background: #fff;
@@ -739,13 +745,67 @@ section {
   font-style: italic;
   border-radius: 5px;
 }
+
 @media (max-width: 1180px) {
   #testimonials .quote {
-    margin-left: 60px;
-    /* margin-top: 35px; */
+      margin-left: 60px;
+  }
+}
+
+@media (max-width: 992px) {
+  #testimonials {
+      padding: 60px 20px;
   }
 
+  #testimonials .profile {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+  }
+
+  #testimonials .quote {
+      margin-left: 0;
+      padding: 40px;
+      font-size: 14px;
+  }
 }
+
+@media (max-width: 768px) {
+  #testimonials {
+      padding: 40px 10px;
+  }
+
+  #testimonials .profile .pic {
+      height: 200px;
+      width: 200px;
+  }
+
+  #testimonials .quote {
+      padding: 30px;
+      font-size: 12px;
+  }
+}
+
+@media (max-width: 576px) {
+  #testimonials .profile .pic {
+      height: 180px;
+      width: 180px;
+  }
+
+  #testimonials .quote {
+      padding: 20px;
+      font-size: 10px;
+  }
+
+  #testimonials .profile h4 {
+      font-size: 18px;
+  }
+
+  #testimonials .profile span {
+      font-size: 14px;
+  }
+}
+
 #testimonials .quote b {
   display: inline-block;
   font-size: 22px;
@@ -753,6 +813,7 @@ section {
   position: relative;
   top: -8px;
 }
+
 #testimonials .quote small {
   display: inline-block;
   right: -9px;
